@@ -1,4 +1,4 @@
-$Id: TODO,v 1.23 2004/03/02 23:14:38 mkern Exp $
+$Id: TODO,v 1.24 2004/03/03 16:09:09 mkern Exp $
 
 - make the README clearer
 - determine if we can make LIBTOOL=glibtool for mac os x users automatic
@@ -6,12 +6,11 @@ $Id: TODO,v 1.23 2004/03/02 23:14:38 mkern Exp $
 - respond to push requests
 - make http parser accept "\n\n"
 - add meta tags to http reply
+- make use of country code in nodes file
+- do byte order conversion in fst_packet instead of all over the place
+- normalize meta data
+- add searching by meta data
+- does kazaa use the same fst_id for searching again?
+- do we really upload shares which get added not at startup but later?
 - remove firewalled sources from incomplete downloads on shutdown
 - create a FastTrack.conf.template, modify auto default copy routine
-- do we really upload shares which get added not at startup but later?
-- does kazaa use the same fst_id for searchin again?
-- make use of country code in nodes file
-- use bandwidth from search results for availability
-- normalize meta data
-- do byte order conversion in fst_packet instead of all over the place
-
